# docker__template__cpp

./: README.md  _project.code-workspace  docker-compose.yml
.devcontainer/: devcontainer.json
app/cmake/: CMakeLists.txt
docker/ubuntu/: Dockerfile
